# hypha

./: .gitignore  CMakeLists.txt  README.md
include/hypha/: hypha_boundary_matrix.h  hypha_compute_persistence_pairs.h
include/hypha/algorithms/: hypha_accelerator.h  hypha_spectral_sequence_reduction.h  hypha_twist_reduction.h
include/hypha/helpers/: hypha_misc.h
include/phat/: boundary_matrix.h  persistence_pairs.h
include/phat/algorithms/: chunk_reduction.h  row_reduction.h  spectral_sequence_reduction.h  standard_reduction.h  twist_reduction.h
include/phat/helpers/: dualize.h  misc.h  thread_local_storage.h
include/phat/representations/: abstract_pivot_column.h  bit_tree_pivot_column.h  full_pivot_column.h  heap_pivot_column.h  sparse_pivot_column.h  vector_heap.h  vector_list.h  vector_vector.h
src/: convert.cpp  info.cpp  main.cu  phat.cpp
